Added registration validation
