# swagger.json
@@ -57,7 +57,7 @@
 				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_UserPayload_",
 				"description": "Model User"
 			},
-			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts__": {
+			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate__": {
 				"properties": {
 					"email": {
 						"type": "string"
@@ -68,10 +68,6 @@
 					"username": {
 						"type": "string"
 					},
-					"birthDate": {
-						"type": "string",
-						"format": "date-time"
-					},
 					"pictureUrl": {
 						"type": "string"
 					}
@@ -80,20 +76,19 @@
 					"email",
 					"password",
 					"username",
-					"birthDate",
 					"pictureUrl"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts_": {
-				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts__",
+			"Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate_": {
+				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"publicUser": {
 				"allOf": [
 					{
-						"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts_"
+						"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt-or-emailVerified-or-posts-or-birthDate_"
 					},
 					{
 						"properties": {
@@ -119,18 +114,10 @@
 					"username": {
 						"type": "string"
 					},
-					"birthDate": {
-						"allOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{
-								"type": "string"
-							}
-						]
-					},
 					"pictureUrl": {
+						"type": "string"
+					},
+					"birthDate": {
 						"type": "string"
 					}
 				},
